force-app/main/default/objects/Account/fields/Budget_Limit__c.field-meta.xml
<CustomField>
    <fullName>Budget_Limit__c</fullName>
    <label>Budget Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>