force-app/main/default/objects/Account/fields/Related_Projects__c.field-meta.xml
<CustomField>
    <fullName>Related_Projects__c</fullName>
    <label>Related Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>