force-app/main/default/objects/Account/fields/Total_budget__c.field-meta.xml
<CustomField>
    <fullName>Total_budget__c</fullName>
    <label>Total budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>